enable google analytics & disqus

--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ font_heading:          Roboto Slab, Helvetica, Arial, sans-serif, Microsoft Yahe
 
 # Setting a disqus shortname will enable the comment section on
 # pages with `comments: true` in the front matter.
-disqus:                <houzhenni-com>
+disqus:                houzhenni-com
 
 # Setting a tinyletter username will enable the newsletter subscription box.
 # tinyletter:            <tinyletter_username>
@@ -208,7 +208,7 @@ plugins:
 # google_site_verification: <verification-id>
 # -- or --
 webmaster_verifications:
-  google:              google504c317de48e3650
+  google:                UA-115799066-1
 #   bing:                <verification-id>
 #   alexa:               <verification-id>
 #   yandex:              <verification-id>
