--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ font_heading:          Roboto Slab, Helvetica, Arial, sans-serif, Microsoft Yahe
 
 # Set your Google Analytics id to receive `pageview` events.
 # To remove Google Anaylics from your page, remove the line below.
-# google_analytics:      UA-XXXXXXXX-X
+google_analytics:      UA-115799066-1
 
 # Setting a disqus shortname will enable the comment section on
 # pages with `comments: true` in the front matter.
@@ -142,7 +142,7 @@ hydejack:
 
   # When using Google Analytics, set to `true` to display a cookie notice banner.
   # When enabled, no user-related data will be stored until the user gives consent.
-  cookies_banner:      false
+  cookies_banner:      true
 
 
 # Collections
@@ -207,7 +207,7 @@ plugins:
 # google_site_verification: <verification-id>
 # -- or --
 webmaster_verifications:
-  google:                UA-115799066-1
+  google:               google504c317de48e3650
 #   bing:                <verification-id>
 #   alexa:               <verification-id>
 #   yandex:              <verification-id>
