--- a/_config.yml
+++ b/_config.yml
@@ -53,11 +53,11 @@ copyright:             © 2018. All rights reserved.
 
 # Add links to the footer.
 # Typically you'll want to link to your impress, cookies or privacy policy, etc.
-# legal:
+ legal:
 #   - title:             Impress
 #     href:              /impress/
-#   - title:             Cookies Policy
-#     href:              /cookies-policy/
+   - title:             Cookies Policy
+     href:              /cookies-policy/
 
 # Format of the permalinks
 permalink:             pretty
