--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -37,7 +37,7 @@ continue_reading:      >
 
 cookies_banner:
   text:                >
-    This site uses cookies. [Cookies Policy](/cookies-policy/).
+    This site uses cookies. [Cookies Policy](/cookiespolicy/).
   okay:                Okay
 
 not_found:
