add old article

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,7 +8,7 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    会日/英/普/粤的小客服一枚~
+    努力学英语，努力学日语，努力提高中文。我一生的追求大抵如此。
 
   # Lorem ipsum dolor sit amet, consectetur adipiscing elit,
   #  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
