change basic strings

--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -14,7 +14,7 @@ home:                  Home
 pages:                 Pages
 posts:                 Posts
 about:                 About
-related_posts:         Related Posts
+related_posts:         相关文章
 other_projects:        Other Projects
 comments:              Comments
 jump_to:               Jump to
@@ -29,11 +29,11 @@ permalink:             Permalink
 permalink_icon:        icon-link
 templates:             Templates (for web app)
 
-loading:               Loading…
-redirecting:           Redirecting…
+loading:               加载中…
+redirecting:           正在为您重定向页面…
 
 continue_reading:      >
-  Continue reading <!--post_title-->
+  继续阅读 <!--post_title-->
 
 cookies_banner:
   text:                >
