--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ logo:                  /assets/icons/icon.png
 # Duplication is necessary due to the `jekyll-feed`, `jekyll-seo-tag` plugin.
 author:
   name:                Jenny HOU
-  email:               hzn2013@outlook.com
+  email:               admin@houzhenni.com
   # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
