--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,7 +3,7 @@
 # Change `author1` to your shortname.
 author1:
   name:              Jenny HOU
-  email:             hzn2013@outlook.com
+  email:             admin@houzhenni.com
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
